--- a/about-us.html
+++ b/about-us.html
@@ -82,13 +82,13 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                        <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                        <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                        <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a>
+                        <div class="unit-body"><a class="address" href="#">Anna Nagar,Tiruppur - 641602</a>
                         </div>
                       </div>
                     </li>
@@ -99,13 +99,16 @@
                     <li><a class="icon mdi mdi-instagram" href="#"></a></li>
                     <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
                   </ul>
+                  <a href="quote.html">
+                    <button class="btn">Request a quote</button>
+                    </a>
                 </div>
                 <div class="rd-navbar-main">
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Product</a>
                     </li>
@@ -247,20 +250,20 @@
             <div class="tab-content tab-content-1">
               <div class="tab-pane fade show active" id="tabs-4-1">
                 <h4>A Few Words About Us</h4>
-                <p>Welcome to Deepak Collection, where style meets sophistication. For over a decade, we have been the
+                <p>Welcome to Zifra Creations, where style meets sophistication. For over a decade, we have been the
                   premier destination for men's fashion, offering a diverse range of high-quality clothing that blends
                   tradition with contemporary design. From timeless classics to the latest trends, our collection is
                   carefully curated to cater to the modern man who values both comfort and style.</p>
-                <p>At Deepak Collection, we believe that every man deserves to look his best, whether at work, at a
+                <p>At Zifra Creations, we believe that every man deserves to look his best, whether at work, at a
                   social event, or in casual settings. Our commitment to quality and customer satisfaction is reflected
                   in every piece we offer. Join us on our journey to redefine men's fashion, one outfit at a time.</p>
-                <img src="images/aboutsection.jpg" alt="Deepak Collection" width="835" height="418" />
+                <img src="images/aboutsection.jpg" alt="Zifra Creations" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-2">
                 <h4>Our Mission</h4>
                 <p>Our mission is to empower men with stylish and comfortable clothing that boosts confidence and
                   reflects their unique personality. We strive to provide a shopping experience that is as exceptional
-                  as our products, making Deepak Collection the go-to destination for men's fashion.</p><img
+                  as our products, making Zifra Creations the go-to destination for men's fashion.</p><img
                   src="images/aboutsection.jpg" alt="Our Mission" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-3">
@@ -273,7 +276,7 @@
               <div class="tab-pane fade" id="tabs-4-4">
                 <h4>Our Values</h4>
                 <p>Integrity, quality, and customer satisfaction are the core values that drive everything we do at
-                  Deepak Collection. We are committed to providing our customers with clothing that is not only stylish
+                  Zifra Creations. We are committed to providing our customers with clothing that is not only stylish
                   but also durable and comfortable, ensuring they feel confident in every outfit they wear.</p><img
                   src="images/aboutsection.jpg" alt="Our Values" width="835" height="418" />
               </div>
@@ -356,39 +359,39 @@
             <!-- Tab panes-->
             <div class="tab-content tab-content-1">
               <div class="tab-pane fade show active" id="tabs-4-1">
-                <h4>About Deepak Collection</h4>
-                <p>At Deepak Collection, we bring you the finest in men's fashion, with a legacy of over 10 years. Our
+                <h4>About Zifra Creations</h4>
+                <p>At Zifra Creations, we bring you the finest in men's fashion, with a legacy of over 10 years. Our
                   curated selection of apparel is designed to suit every style, whether you're dressing for a casual
                   outing or a formal event.</p>
                 <p>We are dedicated to providing high-quality clothing that combines comfort, durability, and style. Our
                   collections are updated regularly to reflect the latest trends while maintaining classic elegance.</p>
-                <img src="images/aboutsection2.jpg" alt="Deepak Collection" width="835" height="418" />
+                <img src="images/aboutsection2.jpg" alt="Zifra Creations" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-2">
                 <h4>Our Mission</h4>
                 <p>Our mission is to redefine men's fashion by offering clothing that not only meets but exceeds the
                   expectations of our customers. We believe in quality, affordability, and exceptional customer service.
                 </p>
-                <p>At Deepak Collection, we strive to make every man look and feel his best, no matter the occasion.</p>
-                <img src="images/about-1-835x418.jpg" alt="Deepak Collection Mission" width="835" height="418" />
+                <p>At Zifra Creations, we strive to make every man look and feel his best, no matter the occasion.</p>
+                <img src="images/about-1-835x418.jpg" alt="Zifra Creations Mission" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-3">
                 <h4>Our Goals</h4>
-                <p>Our primary goal is to establish Deepak Collection as a leading name in men's fashion. We aim to
+                <p>Our primary goal is to establish Zifra Creations as a leading name in men's fashion. We aim to
                   expand our reach both online and offline, ensuring that our customers have access to the latest styles
                   and trends, wherever they are.</p>
                 <p>We are committed to maintaining the highest standards of quality and service, continuously innovating
                   to meet the changing needs of our customers.</p>
-                <img src="images/about-1-835x418.jpg" alt="Deepak Collection Goals" width="835" height="418" />
+                <img src="images/about-1-835x418.jpg" alt="Zifra Creations Goals" width="835" height="418" />
               </div>
               <div class="tab-pane fade" id="tabs-4-4">
                 <h4>Our Values</h4>
-                <p>At Deepak Collection, we believe in integrity, dedication, and a passion for fashion. We are driven
+                <p>At Zifra Creations, we believe in integrity, dedication, and a passion for fashion. We are driven
                   by a commitment to our customers and a desire to make a positive impact on the world of men's
                   clothing.</p>
                 <p>Our values guide everything we do, from the selection of our fabrics to the way we interact with our
                   customers.</p>
-                <img src="images/about-1-835x418.jpg" alt="Deepak Collection Values" width="835" height="418" />
+                <img src="images/about-1-835x418.jpg" alt="Zifra Creations Values" width="835" height="418" />
               </div>
             </div>
           </div>
@@ -406,7 +409,7 @@
             <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-01-270x236.jpg"
                   alt="" width="270" height="236" /></a>
               <div class="team-modern-caption">
-                <h6 class="team-modern-name"><a href="#">Deepak Sharma</a></h6>
+                <h6 class="team-modern-name"><a href="#">Zifra Sharma</a></h6>
                 <div class="team-modern-status">Founder & CEO</div>
                 <ul class="list-inline team-modern-social-list">
                   <li><a class="icon mdi mdi-facebook" href="#"></a></li>
@@ -477,8 +480,8 @@
             <div class="tabs-custom" id="tabs-5">
               <div class="tab-content tab-content-1">
                 <div class="tab-pane fade" id="tabs-5-1">
-                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Deepak Collection's Inception</h5>
-                  <p>Deepak Collection started with a vision to redefine men's fashion. From a small boutique, we've
+                  <h5 class="font-weight-normal text-transform-none text-spacing-75">Zifra Creations's Inception</h5>
+                  <p>Zifra Creations started with a vision to redefine men's fashion. From a small boutique, we've
                     grown into a brand known for quality and style.</p>
                 </div>
                 <div class="tab-pane fade" id="tabs-5-2">
@@ -615,14 +618,14 @@
         <div class="container">
           <div class="row row-50">
             <div class="col-md-6 col-lg-4">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Deepak
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra
                   Collection</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                 <li><a href="#">Exclusive Pieces</a></li>
                 <li><a href="#">Limited Editions</a></li>
                 <li><a href="#">Artisan Creations</a></li>
                 <li><a href="#">Special Offers</a></li>
-                <li><a href="#">About Deepak</a></li>
+                <li><a href="#">About Zifra</a></li>
                 <li><a href="contacts.html">Contact Us</a></li>
               </ul>
             </div>
@@ -639,10 +642,10 @@
               </ul>
             </div>
             <div class="col-lg-4 col-xl-5">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span>
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Location</span>
               </h5>
-              <p class="wow fadeInRight">Sign up today for the latest updates from the Deepak Collection.</p>
-              <!-- RD Mailform-->
+              <!-- <p class="wow fadeInRight">Sign up today for the latest updates from the Zifra Creations.</p>
+              RD Mailform
               <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop"
                 data-form-output="form-output-global" data-form-type="subscribe" method="post"
                 action="bat/rd-mailform.php">
@@ -656,7 +659,8 @@
                       class="d-none d-xl-inline-block">Subscribe</span><span
                       class="icon mdi mdi-telegram d-xl-none"></span></button>
                 </div>
-              </form>
+              </form> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3914.1273603663185!2d77.34719037504775!3d11.178204788996023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTHCsDEwJzQxLjUiTiA3N8KwMjAnNTkuMiJF!5e0!3m2!1sen!2sin!4v1736617224959!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -667,7 +671,7 @@
             <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
               <div class="row row-30 align-items-center text-lg-center">
                 <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img
-                      src="images/logo.jpg" alt="" width="198" height="66" /></a></div>
+                      src="images/logo gold.png" alt="" width="198" height="66" /></a></div>
                 <div class="col-md-5 col-xl-6">
                   <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58"
                         height="25" /></span><span class="iso-1-big">9.4k</span></div>
@@ -679,7 +683,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
@@ -704,11 +708,11 @@
       <div class="footer-modern-line-3">
         <div class="container">
           <div class="row row-10 justify-content-between">
-            <div class="col-md-6"><span>514 S. Magnolia St. Orlando, FL 32806</span></div>
+            <div class="col-md-6"><span>Anna Nagar,Tiruppur - 641602</span></div>
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2024 All Right Reserved Design & Develop by Roxxon Infotech</span>
+                <span>Copyright © 2024 All Right Reserved Design & Develop by Cyber Phoenix IT Services</span>
               </p>
             </div>
           </div>
@@ -721,6 +725,8 @@
   <!-- Javascript-->
   <script src="js/core.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+  <div class="elfsight-app-b4816491-0f19-4e9b-8e70-51318ec3f9a2" data-elfsight-app-lazy></div>
 </body>
 
 </html>
