--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                        <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                        <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                        <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a>
+                        <div class="unit-body"><a class="address" href="#">Anna Nagar,Tiruppur - 641602</a>
                         </div>
                       </div>
                     </li>
@@ -99,6 +99,9 @@
                     <li><a class="icon mdi mdi-instagram" href="#"></a></li>
                     <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
                   </ul>
+                  <a href="quote.html">
+                  <button class="btn">Request a quote</button>
+                  </a>
                 </div>
                 <div class="rd-navbar-main">
                   <!-- RD Navbar Nav-->
@@ -218,9 +221,9 @@
               <div class="row">
                 <div class="col-sm-9 col-md-8 col-lg-7 col-xl-7 offset-lg-1 offset-xxl-0">
                   <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInUp"
-                      data-caption-delay="0">Deepak Collection</span></h1>
+                      data-caption-delay="0">Zifra Creations</span></h1>
                   <p class="big swiper-text" data-caption-animate="fadeInLeft" data-caption-delay="300">Discover the
-                    epitome of style and sophistication with Deepak Collection. Elevate your wardrobe with our premium
+                    epitome of style and sophistication with Zifra Creations. Elevate your wardrobe with our premium
                     men's apparel designed for the modern gentleman!</p>
                 </div>
               </div>
@@ -235,7 +238,7 @@
                   <h1 class="oh swiper-title"><span class="d-inline-block" data-caption-animate="slideInDown"
                       data-caption-delay="0">Premium Quality</span></h1>
                   <p class="big swiper-text" data-caption-animate="fadeInRight" data-caption-delay="300">Experience the
-                    unmatched quality of Deepak Collection’s menswear. Crafted with the finest fabrics and meticulous
+                    unmatched quality of Zifra Creations’s menswear. Crafted with the finest fabrics and meticulous
                     attention to detail for a perfect fit and enduring style.</p>
                   <div class="button-wrap oh"><a class="button button-lg button-primary button-winona button-shadow-2"
                       href="#" data-caption-animate="slideInUp" data-caption-delay="0">Explore Our Collection</a></div>
@@ -351,10 +354,10 @@
             <div class="col-sm-8 col-md-7 col-lg-5">
               <div class="cta-modern">
                 <h3 class="cta-modern-title wow fadeInRight">Elevate Your Style</h3>
-                <p class="lead">Deepak Collection offers unparalleled quality and style for the modern man. Explore our
+                <p class="lead">Zifra Creations offers unparalleled quality and style for the modern man. Explore our
                   range of premium apparel and accessories.</p>
                 <p class="cta-modern-text oh-desktop" data-wow-delay=".1s"><span
-                    class="cta-modern-decor wow slideInLeft"></span><span class="d-inline-block wow slideInDown">Deepak
+                    class="cta-modern-decor wow slideInLeft"></span><span class="d-inline-block wow slideInDown">Zifra
                     Sharma, Founder</span></p>
                 <a class="button button-md button-secondary-2 button-winona wow fadeInUp" href="#"
                   data-wow-delay=".2s">Explore Our Collection</a>
@@ -466,7 +469,7 @@
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">Deepak Collection offers premium clothing that truly stands out. The quality and style are
+                <p class="q">Zifra Creations offers premium clothing that truly stands out. The quality and style are
                   unmatched, making every piece a worthwhile investment.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-6-115x115.jpg" alt="" width="115" height="115" />
@@ -479,7 +482,7 @@
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">I love shopping at Deepak Collection. The men's wear is top-notch, and the customer service
+                <p class="q">I love shopping at Zifra Creations. The men's wear is top-notch, and the customer service
                   is always excellent.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-8-115x115.jpg" alt="" width="115" height="115" />
@@ -492,7 +495,7 @@
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">Deepak Collection's apparel is always stylish and durable. Their attention to detail and
+                <p class="q">Zifra Creations's apparel is always stylish and durable. Their attention to detail and
                   quality is evident in every garment.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-7-115x115.jpg" alt="" width="115" height="115" />
@@ -505,7 +508,7 @@
           <article class="quote-tara">
             <div class="quote-tara-caption">
               <div class="quote-tara-text">
-                <p class="q">Every time I shop at Deepak Collection, I find exactly what I need. Their range is
+                <p class="q">Every time I shop at Zifra Creations, I find exactly what I need. Their range is
                   fantastic and always on trend.</p>
               </div>
               <div class="quote-tara-figure"><img src="images/user-9-115x115.jpg" alt="" width="115" height="115" />
@@ -529,7 +532,7 @@
               <div class="box-icon-megan-icon linearicons-bag"></div>
             </div>
             <h5 class="box-icon-megan-title"><a href="#">Exclusive Collection</a></h5>
-            <p class="box-icon-megan-text">Discover our exclusive Deepak Collection, featuring unique and premium
+            <p class="box-icon-megan-text">Discover our exclusive Zifra Creations, featuring unique and premium
               selections.</p>
           </article>
           <article class="box-icon-megan wow fadeInUp" data-wow-delay=".05s">
@@ -537,7 +540,7 @@
               <div class="box-icon-megan-icon linearicons-map2"></div>
             </div>
             <h5 class="box-icon-megan-title"><a href="#">Premium Quality</a></h5>
-            <p class="box-icon-megan-text">Each item in the Deepak Collection is crafted with the highest quality
+            <p class="box-icon-megan-text">Each item in the Zifra Creations is crafted with the highest quality
               materials.</p>
           </article>
           <article class="box-icon-megan wow fadeInUp" data-wow-delay=".1s">
@@ -545,7 +548,7 @@
               <div class="box-icon-megan-icon linearicons-radar"></div>
             </div>
             <h5 class="box-icon-megan-title"><a href="#">Limited Edition</a></h5>
-            <p class="box-icon-megan-text">Explore our limited edition pieces from the Deepak Collection, available for
+            <p class="box-icon-megan-text">Explore our limited edition pieces from the Zifra Creations, available for
               a short time only.</p>
           </article>
           <article class="box-icon-megan wow fadeInUp" data-wow-delay=".15s">
@@ -553,7 +556,7 @@
               <div class="box-icon-megan-icon linearicons-thumbs-up"></div>
             </div>
             <h5 class="box-icon-megan-title"><a href="#">Handcrafted Designs</a></h5>
-            <p class="box-icon-megan-text">Experience the artistry of handcrafted designs in our exclusive Deepak
+            <p class="box-icon-megan-text">Experience the artistry of handcrafted designs in our exclusive Zifra
               Collection.</p>
           </article>
         </div>
@@ -567,14 +570,14 @@
         <div class="container">
           <div class="row row-50">
             <div class="col-md-6 col-lg-4">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Deepak
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra
                   Collection</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                 <li><a href="#">Exclusive Pieces</a></li>
                 <li><a href="#">Limited Editions</a></li>
                 <li><a href="#">Artisan Creations</a></li>
                 <li><a href="#">Special Offers</a></li>
-                <li><a href="#">About Deepak</a></li>
+                <li><a href="#">About Zifra</a></li>
                 <li><a href="contacts.html">Contact Us</a></li>
               </ul>
             </div>
@@ -591,10 +594,10 @@
               </ul>
             </div>
             <div class="col-lg-4 col-xl-5">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span>
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Location</span>
               </h5>
-              <p class="wow fadeInRight">Sign up today for the latest updates from the Deepak Collection.</p>
-              <!-- RD Mailform-->
+              <!-- <p class="wow fadeInRight">Sign up today for the latest updates from the Zifra Creations.</p>
+              RD Mailform
               <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop"
                 data-form-output="form-output-global" data-form-type="subscribe" method="post"
                 action="bat/rd-mailform.php">
@@ -608,7 +611,8 @@
                       class="d-none d-xl-inline-block">Subscribe</span><span
                       class="icon mdi mdi-telegram d-xl-none"></span></button>
                 </div>
-              </form>
+              </form> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3914.1273603663185!2d77.34719037504775!3d11.178204788996023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTHCsDEwJzQxLjUiTiA3N8KwMjAnNTkuMiJF!5e0!3m2!1sen!2sin!4v1736617224959!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -619,7 +623,7 @@
             <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
               <div class="row row-30 align-items-center text-lg-center">
                 <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img
-                      src="images/logo.jpg" alt="" width="198" height="66" /></a></div>
+                      src="images/logo gold.png" alt="" width="198" height="66" /></a></div>
                 <div class="col-md-5 col-xl-6">
                   <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58"
                         height="25" /></span><span class="iso-1-big">9.4k</span></div>
@@ -631,7 +635,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
@@ -656,11 +660,11 @@
       <div class="footer-modern-line-3">
         <div class="container">
           <div class="row row-10 justify-content-between">
-            <div class="col-md-6"><span>514 S. Magnolia St. Orlando, FL 32806</span></div>
+            <div class="col-md-6"><span>Anna Nagar,Tiruppur - 641602</span></div>
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2024 All Right Reserved Design & Develop by Roxxon Infotech</span>
+                <span>Copyright © 2024 All Right Reserved Design & Develop by Cyber Phoenix IT Services</span>
               </p>
             </div>
           </div>
@@ -674,6 +678,8 @@
   <!-- Javascript-->
   <script src="js/core.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+  <div class="elfsight-app-b4816491-0f19-4e9b-8e70-51318ec3f9a2" data-elfsight-app-lazy></div>
   <!-- coded by Himic-->
 </body>
 
