--- a/products.html
+++ b/products.html
@@ -82,13 +82,13 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                        <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                        <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
                       </div>
                     </li>
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon mdi mdi-map-marker"></span></div>
-                        <div class="unit-body"><a class="address" href="#">514 S. Magnolia St. Orlando, FL 32806</a>
+                        <div class="unit-body"><a class="address" href="#">Anna Nagar,Tiruppur - 641602</a>
                         </div>
                       </div>
                     </li>
@@ -99,15 +99,18 @@
                     <li><a class="icon mdi mdi-instagram" href="#"></a></li>
                     <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
                   </ul>
+                  <a href="quote.html">
+                    <button class="btn">Request a quote</button>
+                    </a>
                 </div>
                 <div class="rd-navbar-main">
                   <!-- RD Navbar Nav-->
                   <ul class="rd-navbar-nav">
-                    <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
+                    <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Home</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                     </li>
-                    <li class="rd-nav-item"><a class="rd-nav-link" href="products.html">Our Product</a>
+                    <li class="rd-nav-item active"><a class="rd-nav-link" href="products.html">Our Product</a>
                     </li>
                     <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contacts</a>
                     </li>
@@ -397,14 +400,14 @@
         <div class="container">
           <div class="row row-50">
             <div class="col-md-6 col-lg-4">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Deepak
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Zifra
                   Collection</span></h5>
               <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
                 <li><a href="#">Exclusive Pieces</a></li>
                 <li><a href="#">Limited Editions</a></li>
                 <li><a href="#">Artisan Creations</a></li>
                 <li><a href="#">Special Offers</a></li>
-                <li><a href="#">About Deepak</a></li>
+                <li><a href="#">About Zifra</a></li>
                 <li><a href="contacts.html">Contact Us</a></li>
               </ul>
             </div>
@@ -421,10 +424,10 @@
               </ul>
             </div>
             <div class="col-lg-4 col-xl-5">
-              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Newsletter</span>
+              <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Location</span>
               </h5>
-              <p class="wow fadeInRight">Sign up today for the latest updates from the Deepak Collection.</p>
-              <!-- RD Mailform-->
+              <!-- <p class="wow fadeInRight">Sign up today for the latest updates from the Zifra Creations.</p>
+              RD Mailform
               <form class="rd-form rd-mailform rd-form-inline rd-form-inline-sm oh-desktop"
                 data-form-output="form-output-global" data-form-type="subscribe" method="post"
                 action="bat/rd-mailform.php">
@@ -438,7 +441,8 @@
                       class="d-none d-xl-inline-block">Subscribe</span><span
                       class="icon mdi mdi-telegram d-xl-none"></span></button>
                 </div>
-              </form>
+              </form> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3914.1273603663185!2d77.34719037504775!3d11.178204788996023!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTHCsDEwJzQxLjUiTiA3N8KwMjAnNTkuMiJF!5e0!3m2!1sen!2sin!4v1736617224959!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
         </div>
@@ -449,7 +453,7 @@
             <div class="col-sm-6 col-md-7 col-lg-4 col-xl-4">
               <div class="row row-30 align-items-center text-lg-center">
                 <div class="col-md-7 col-xl-6"><a class="brand" href="index.html"><img
-                      src="images/logo.jpg" alt="" width="198" height="66" /></a></div>
+                      src="images/logo gold.png" alt="" width="198" height="66" /></a></div>
                 <div class="col-md-5 col-xl-6">
                   <div class="iso-1"><span><img src="images/like-icon-58x25.png" alt="" width="58"
                         height="25" /></span><span class="iso-1-big">9.4k</span></div>
@@ -461,7 +465,7 @@
                 <div class="footer-modern-contacts wow slideInUp">
                   <div class="unit unit-spacing-sm align-items-center">
                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                    <div class="unit-body"><a class="phone" href="tel:#">+1 718-999-3939</a></div>
+                    <div class="unit-body"><a class="phone" href="tel:#">+91 7200439935</a></div>
                   </div>
                 </div>
                 <div class="footer-modern-contacts wow slideInDown">
@@ -486,11 +490,11 @@
       <div class="footer-modern-line-3">
         <div class="container">
           <div class="row row-10 justify-content-between">
-            <div class="col-md-6"><span>514 S. Magnolia St. Orlando, FL 32806</span></div>
+            <div class="col-md-6"><span>Anna Nagar,Tiruppur - 641602</span></div>
             <div class="col-md-auto">
               <!-- Rights-->
               <p class="rights">
-                <span>Copyright © 2024 All Right Reserved Design & Develop by Roxxon Infotech</span>
+                <span>Copyright © 2024 All Right Reserved Design & Develop by Cyber Phoenix IT Services</span>
               </p>
             </div>
           </div>
@@ -503,6 +507,8 @@
   <!-- Javascript-->
   <script src="js/core.min.js"></script>
   <script src="js/script.js"></script>
+  <script src="https://static.elfsight.com/platform/platform.js" async></script>
+  <div class="elfsight-app-b4816491-0f19-4e9b-8e70-51318ec3f9a2" data-elfsight-app-lazy></div>
 </body>
 
 </html>
